Fixed row spacing of events on the homepage. Added the event page, which will be at the url /events/event-slug-name.

--- a/project/static/base/css/main.css
+++ b/project/static/base/css/main.css
@@ -160,7 +160,7 @@ ul.nav a#twitter {
 	width: 41px;
 	height: 41px;
 	padding-bottom: 0;
-	background: url("../img/social-twitter.png") top no-repeat;
+	background: url("../images/social-twitter.png") top no-repeat;
 }
 
 ul.nav a#facebook {
@@ -168,7 +168,7 @@ ul.nav a#facebook {
 	width: 41px;
 	height: 41px;
 	padding-bottom: 0;
-	background: url("../img/social-facebook.png") top no-repeat;
+	background: url("../images/social-facebook.png") top no-repeat;
 }
 
 ul.nav a:hover {
@@ -177,12 +177,12 @@ ul.nav a:hover {
 
 ul.nav a#twitter:hover {
 	border-bottom: none;
-	background: url("../img/social-twitter.png") bottom no-repeat;
+	background: url("../images/social-twitter.png") bottom no-repeat;
 }
 
 ul.nav a#facebook:hover {
 	border-bottom: none;
-	background: url("../img/social-facebook.png") bottom no-repeat;
+	background: url("../images/social-facebook.png") bottom no-repeat;
 }
 
 /* =================== Content =================== */
@@ -204,6 +204,7 @@ section#events .row:after {
 section#events .col {
 	width: 48%;
 	float: left;
+	margin-top: 20px;
 	margin-right: 20px;
 }
 
@@ -402,7 +403,7 @@ footer #social a#twitter {
 	vertical-align: middle;
 	height: 41px;
 	width: 41px;
-	background: url("../img/social-twitter.png") top no-repeat;
+	background: url("../images/social-twitter.png") top no-repeat;
 }
 
 footer #social a#facebook {
@@ -411,16 +412,16 @@ footer #social a#facebook {
 	vertical-align: middle;
 	height: 41px;
 	width: 41px;
-	background: url("../img/social-facebook.png") top no-repeat;
+	background: url("../images/social-facebook.png") top no-repeat;
 }
 
 footer #social a#twitter:hover {
-	background: url("../img/social-twitter.png") bottom no-repeat;
+	background: url("../images/social-twitter.png") bottom no-repeat;
 }
 
 footer #social a#facebook:hover {
 	border-bottom: none;
-	background: url("../img/social-facebook.png") bottom no-repeat;
+	background: url("../images/social-facebook.png") bottom no-repeat;
 }
 
 footer img#logo {
